Version 4.01 May 27, 2014

    [DOCUMENTATION]
    - CGI.pm hasn't been removed from core *just* yet, but will be soon:
      http://perl5.git.perl.org/perl.git/commitdiff/e9fa5a80 

Version 4.00 May 22, 2014

    [INTERNALS]
    - CGI::Fast split out into its own distribution, related files and tests removed
    - developer test added for building with perlbrew

    [DOCUMENTATION]
    - Update perldoc to explain that CGI.pm has been removed from perl core
    - Make =head2 perldoc less shouty (RT #91140)
    - Tickets migrated from RT to github issues (both CGI and CGI.pm distributions)
    - Repointing bugtracker at newly forked github repo and note that Lee Johnson
      is the current maintainer.
    - Bump version to 4.00 for clear boundary of above changes

Version 3.65 Feb 11, 2014

    [INTERNALS]
    - Update Makefile to refine where CGI.pm gets installed 
      (Thanks to bingo, rjbs: https://github.com/markstos/CGI.pm/pull/30)

Version 3.64 Nov 23, 2013

    [BUG FIXES]
    - Avoid warning about "undefined variable in user_agent in some cases (RT#72882)

    [INTERNALS]
    - Avoiding warning about "unitialized value" in when calling user_agent() in some cases. (RT#72882, perl@max-maurer.de)
    - Update minimum required version in Makefile.PL to 5.8.1. It had already been
      updated to 5.8.1 in the CGI.pm module in 3.53.
    - Fix POD errors reported by newer pod2man (Thanks to jmdh)
    - Typo fixes, (dsteinbrunner).
    - use deprecate.pm on perls 5.19.0 and later. (rjbs).

    [DOCUMENTATION]    
    - Update CGI::Cookie docs to reflect that HttpOnly is widely supported now.


Version 3.63 Nov 12, 2012

    [SECURITY]
    - CR escaping for Set-Cookie and P3P headers was improved. There was potential
      for newline injection in these headers. 
      (Thanks to anazawa, https://github.com/markstos/CGI.pm/pull/23)

Version 3.62, Nov 9th, 2012

    [INTERNALS]
    - Changed how the  deprecated endform function was defined for compatibilty